--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nosotros</title>
-    <link rel="stylesheet" href="../css/estilos.css">
-
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>NeptunoAromas</title>
+        <link rel="stylesheet" href="../css/estilos.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+    </head>
 
 <body>
     <header class="header">
@@ -35,18 +39,36 @@
         </div>
     </header>
 
-    <div class="navcontenedor">
-        <nav class="navmenu">
-            <ul>
-                <li class="navegacion"><a href="../index.html">Home</a></li>
-                <li class="navegacion"><a href="./astrologia.html">Astrologia</li>
-                <li class="navegacion"><a href="./productos.html">Productos</a></li>
-                <li class="navegacion"><a href="./sobreNosotros.html">Sobre Nosotros</a></li>
-                <li class="navegacion"><a href="./contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </div>
-
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="astrologia.html">Astrología</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="productos.html">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="sobreNosotros.html">Sobre Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
 <main>
     <p>Hola! Mi nombre es Lucía Pais y soy la cara visible de este proyecto.</p>
     <p>Hace unos años comencé a estudiar Astrología y descubrí un mundo que hasta ese momento me era ajeno y cambió mi vida completamente. En este viaje al interior de mí misma conocí gente maravillosa que me acercó a la espiritualidad y a la aromaterapia permitiéndome conectar a fondo con lo más íntimo de mi ser.</p>
