--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NeptunoAromas</title>
+    <!--Link de CSS-->
     <link rel="stylesheet" href="css/estilos.css">
+    <!--Link de Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -24,20 +26,25 @@
         <div>
             <img class="logo" src="assets/img/logo.JPG">
         </div>
-        <div>
-            <form>
-                <label for="usuario">Usuario</label>
-                <input type="email" name="usuario">
-                <br>
-                <label for="pontraseña">Contraseña</label>
-                <input type="password" name="contraseña">
-                <br>
-                <input type="submit" value="Enviar">
-                <input type="button" value="Crear Usuario">
-                <input type="button" value="Olvide mi contraseña">
-            </form>
-        </div>
+
+<!--Formulario de Sesion-->
+
+<div>
+    <form>
+        <label for="usuario">Usuario</label>
+        <input type="email" name="usuario">
+        <br>
+        <label for="pontraseña">Contraseña</label>
+        <input type="password" name="contraseña">
+        <br>
+        <input type="submit" value="Enviar">
+        <input type="button" value="Crear Usuario">
+        <input type="button" value="Olvide mi contraseña">
+    </form>
+</div>
     </header>
+
+<!--Barra de Navegacion-->
 
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
@@ -74,6 +81,8 @@
         <p class="frase">Disminuye la velocidad y respira. Fragancias para cada momento. Neptuno Aromas Astrales.</p>
     </main>
 
+    <!--Carrousel de fotos-->
+
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -108,6 +117,7 @@
 
 
 
+<!--Footer-->
 
     <footer class="footer">
         <ul>
