--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>NeptunoAromas</title>
-        <link rel="stylesheet" href="../css/estilos.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NeptunoAromas</title>
+    <!--Link de CSS-->
+    <link rel="stylesheet" href="../css/estilos.css">
+    <!--Link de Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+</head>
+
+<!--Header-->
 
 <body>
     <header class="header">
@@ -30,7 +34,7 @@
                 <input type="email" name="usuario">
                 <br>
                 <label for="pontraseña">Contraseña</label>
-                <input type="password" name="contraseña"> 
+                <input type="password" name="contraseña">
                 <br>
                 <input type="submit" value="Enviar">
                 <input type="button" value="Crear Usuario">
@@ -38,6 +42,8 @@
             </form>
         </div>
     </header>
+
+    <!--Barra de Navegacion-->
 
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
@@ -70,7 +76,7 @@
         </div>
     </nav>
 
-
+    <!--Formulario de Contacto-->
     <form>
         <label for="Nombre">Nombre</label>
         <input type="Nombre" name="Nombre" placeholder="Ingrese su nombre">
@@ -85,7 +91,9 @@
         <input type="submit" value="Enviar">
         <input type="reset" value="Limpiar formulario">
     </form>
-    <footer>
+
+    <!--Footer-->
+    <footer class="footer">
         <ul>
             <li><a href="https://www.instagram.com/neptunoaromas/?hl=es-la" target="blank">Instagram</a></li>
             <li><a href="https:/www.facebook.com" target="blank">Facebook</a></li>
