--- a/pages/astrologia.html
+++ b/pages/astrologia.html
@@ -9,9 +9,6 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -71,14 +68,39 @@
     </nav>
 
     <img class="bordefoto" src="../Assets/Img/astrologia.jpg" height="300" width="300">
-    <footer>
-        <ul>
-            <li><a href="https://www.instagram.com/neptunoaromas/?hl=es-la" target="blank">Instagram</a></li>
-            <li><a href="https:/www.facebook.com" target="blank">Facebook</a></li>
-        </ul>
-        <hr>
-        <p>Copyright 2022 - Neptuno Aromas - Todos los derechos reservados</p>
+    <footer class="footer">
+        <footer class="footerProductos">
+            <div class="redes">
+                <a href="https://www.instagram.com/neptunoaromas/?hl=es-la" target="Blank">
+                    <img src="https://img.icons8.com/fluency/48/000000/instagram-new.png" /></a>
+                <a href="https://www.facebook.com/neptuno.aromasastrales" target="Blank">
+                    <img src="https://img.icons8.com/fluency/48/000000/facebook.png" /></a>
+            </div>
+            <div class="contactoContainer">
+                <ul class="contacto">
+                    <li>11-5158-7987</li>
+                    <li>neptunoaromas@gmail.com</li>
+                </ul>
+            </div>
+            <div class="productosContainer">
+                <ul class="productos">
+                    <li>Ubicación</li>
+                    <li>Béccar, Parido de San Isidro</li>
+                    <li>Caballito, Ciudad de Buenos Aires</li>
+                    <li>Pompeya, Ciudad de Buenos Aires</li>
+                </ul>
+            </div>
+        </footer>
+        <!-- FOOTER -->
+        <!-- COPYRIGHT -->
+        <div class="copyright" id="copyrightProductos">
+            <p>>Copyright 2022 - Neptuno Aromas - Todos los derechos reservados</p>
+        </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
