--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -9,9 +9,7 @@
         <link rel="stylesheet" href="../css/estilos.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
+
     </head>
 
 <body>
@@ -76,18 +74,41 @@
     <p>Gracias a este proceso nació este emprendimiento que lo que busca es compartir con ustedes un pedacito de esta hermosa experiencia y ayudarlos a recorrer el camino para que logren llegar a su destino de felicidad.</p>
     <p>Bienvenidos a Neptuno Aromas Astrales, un lugar de fragancias, sensaciones y conexión con la libertad.</p>
     <p>Lu</p>
-
-
 </main>
-        <footer>
-            <ul>
-                <li><a href="https://www.instagram.com/neptunoaromas/?hl=es-la" target="blank">Instagram</a></li>
-                <li><a href="https:/www.facebook.com" target="blank">Facebook</a></li>
+
+<!--Footer-->
+<footer class="footer">
+    <footer class="footerProductos">
+        <div class="redes">
+            <a href="https://www.instagram.com/neptunoaromas/?hl=es-la" target="Blank">
+                <img src="https://img.icons8.com/fluency/48/000000/instagram-new.png" /></a>
+            <a href="https://www.facebook.com/neptuno.aromasastrales" target="Blank">
+                <img src="https://img.icons8.com/fluency/48/000000/facebook.png" /></a>
+        </div>
+        <div class="contactoContainer">
+            <ul class="contacto">
+                <li>11-5158-7987</li>
+                <li>neptunoaromas@gmail.com</li>
             </ul>
-            <hr>
-            <p>Copyright 2022 - Neptuno Aromas - Todos los derechos reservados</p>
-        </footer>
+        </div>
+        <div class="productosContainer">
+            <ul class="productos">
+                <li>Ubicación</li>
+                <li>Béccar, Parido de San Isidro</li>
+                <li>Caballito, Ciudad de Buenos Aires</li>
+                <li>Pompeya, Ciudad de Buenos Aires</li>
+            </ul>
+        </div>
+    </footer>
+    <div class="copyright" id="copyrightProductos">
+        <p>>Copyright 2022 - Neptuno Aromas - Todos los derechos reservados</p>
+    </div>
+</footer>
     </header>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
