agrego segunda entrega final

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -34,9 +34,9 @@
                 <label for="pontraseña">Contraseña</label>
                 <input type="password" name="contraseña">
                 <br>
-                <input type="submit" value="Enviar">
-                <input type="button" value="Crear Usuario">
-                <input type="button" value="Olvide mi contraseña">
+                <input class="boton" type="submit" value="Enviar">
+                <input class="boton" type="button" value="Crear Usuario">
+                <input class="boton" type="button" value="Olvide mi contraseña">
             </form>
         </div>
     </header>
