--- a/pages/productos.html
+++ b/pages/productos.html
@@ -30,9 +30,9 @@
                 <label for="pontraseña">Contraseña</label>
                 <input type="password" name="contraseña">
                 <br>
-                <input type="submit" value="Enviar">
-                <input type="button" value="Crear Usuario">
-                <input type="button" value="Olvide mi contraseña">
+                <input class="boton" type="submit" value="Enviar">
+                <input class="boton" type="button" value="Crear Usuario">
+                <input class="boton" type="button" value="Olvide mi contraseña">
             </form>
         </div>
     </header>
@@ -243,8 +243,6 @@
                 </ul>
             </div>
         </footer>
-        <!-- FOOTER -->
-        <!-- COPYRIGHT -->
         <div class="copyright" id="copyrightProductos">
             <p>>Copyright 2022 - Neptuno Aromas - Todos los derechos reservados</p>
         </div>
