--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -30,9 +30,9 @@
                 <label for="pontraseña">Contraseña</label>
                 <input type="password" name="contraseña"> 
                 <br>
-                <input type="submit" value="Enviar">
-                <input type="button" value="Crear Usuario">
-                <input type="button" value="Olvide mi contraseña">
+                <input class="boton" type="submit" value="Enviar">
+                <input class="boton" type="button" value="Crear Usuario">
+                <input class="boton" type="button" value="Olvide mi contraseña">
             </form>
         </div>
     </header>
@@ -67,13 +67,14 @@
             </div>
         </div>
     </nav>
-<main>
-    <p>Hola! Mi nombre es Lucía Pais y soy la cara visible de este proyecto.</p>
-    <p>Hace unos años comencé a estudiar Astrología y descubrí un mundo que hasta ese momento me era ajeno y cambió mi vida completamente. En este viaje al interior de mí misma conocí gente maravillosa que me acercó a la espiritualidad y a la aromaterapia permitiéndome conectar a fondo con lo más íntimo de mi ser.</p>
-    <p>Empecé a sentir la vida desde otro lugar, me acerqué a la naturaleza, me relacioné con los aromas, los cristales, la energía, y descubrí que el poder de transformación está dentro de cada uno, sólo hay que saber bucear en los océanos de nuestras emociones más profundas para encontrarnos con lo esencial de nuestro ser.</p>
-    <p>Gracias a este proceso nació este emprendimiento que lo que busca es compartir con ustedes un pedacito de esta hermosa experiencia y ayudarlos a recorrer el camino para que logren llegar a su destino de felicidad.</p>
-    <p>Bienvenidos a Neptuno Aromas Astrales, un lugar de fragancias, sensaciones y conexión con la libertad.</p>
-    <p>Lu</p>
+    
+<main class="fotosobrenosotros">
+    <p class="texto">Hola! Mi nombre es Lucía Pais y soy la cara visible de este proyecto.</p>
+    <p class="texto">Hace unos años comencé a estudiar Astrología y descubrí un mundo que hasta ese momento me era ajeno y cambió mi vida completamente. En este viaje al interior de mí misma conocí gente maravillosa que me acercó a la espiritualidad y a la aromaterapia permitiéndome conectar a fondo con lo más íntimo de mi ser.</p>
+    <p class="texto">Empecé a sentir la vida desde otro lugar, me acerqué a la naturaleza, me relacioné con los aromas, los cristales, la energía, y descubrí que el poder de transformación está dentro de cada uno, sólo hay que saber bucear en los océanos de nuestras emociones más profundas para encontrarnos con lo esencial de nuestro ser.</p>
+    <p class="texto">Gracias a este proceso nació este emprendimiento que lo que busca es compartir con ustedes un pedacito de esta hermosa experiencia y ayudarlos a recorrer el camino para que logren llegar a su destino de felicidad.</p>
+    <p class="texto">Bienvenidos a Neptuno Aromas Astrales, un lugar de fragancias, sensaciones y conexión con la libertad.</p>
+    <p class="texto">Lu</p>
 </main>
 
 <!--Footer-->
