--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
             <h2 class="dos">Tienda Online</h2>
         </div>
 
+<section>
         <div>
             <img class="logo" src="assets/img/logo.JPG">
         </div>
-
+</section>
 <!--Formulario de Sesion-->
 
 <div>
@@ -75,9 +76,9 @@
         </div>
     </nav>
 
-    <main>
+    <section>
         <p class="frase">Disminuye la velocidad y respira. Fragancias para cada momento. Neptuno Aromas Astrales.</p>
-    </main>
+    </section>
 
     <!--Carrousel de fotos-->
 
